# net-gazer-web

./: .gitignore  Cargo.toml  README.md  app.js  docker-compose.yml  package.json
etc/net-gazer-web/: net-gazer-web.toml
lib-comm/: Cargo.toml
lib-comm/src/: lib.rs
lib-data/: Cargo.toml
lib-data/src/: conf.rs  lib.rs
lib-db/: Cargo.toml
lib-db/src/: lib.rs
lib-fbuffers/: allipv4.fbs  make.sh  traceroute.fbs
lib-fbuffers/src/: allipv4_generated.rs  lib.rs  traceroute_generated.rs
src/: main.rs
static/: chart.html  data.json
www/: package.json
www/static/: data-test.json  data.json
