[package]
name = "net-gazer-web"
version = "0.1.0"
authors = ["Serguei Oleinik <46495908+s-oleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=[
    "lib-data",
    "lib-fbuffers",
    "lib-db",
    "lib-comm",
]

[dependencies]
lib-data = { path="./lib-data" }
lib-fbuffers = { path="./lib-fbuffers" }
lib-db = { path="./lib-db" }
lib-comm = { path="./lib-comm" }

actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
futures = "0.3.4"

log = "0.4.8"
env_logger = "0.7.1"

redis = "0.15.1"
